--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   minecraft:
-    image: minecraft-paper:latest
+    image: sayanpramanik/minecraft-paper:latest
     container_name: minecraft-paper-server
     ports:
       # Format: "HOST_PORT:CONTAINER_PORT"
