--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,24 +24,30 @@ jobs:
       - name: Get Paper version
         id: paper_version
         run: |
-          PAPER_VERSION=$(curl -s https://api.papermc.io/v2/projects/paper | jq -r '.versions[-1]')
+          # Get all versions and filter out beta/RC versions
+          PAPER_VERSION=$(curl -s https://api.papermc.io/v2/projects/paper | jq -r '.versions[] | select(test("^[0-9]+\\.[0-9]+\\.[0-9]+$"))' | sort -V | tail -n 1)
           echo "PAPER_VERSION=$PAPER_VERSION" >> $GITHUB_ENV
 
       - name: Get existing tags
         id: get_tags
         run: |
-          TAGS=$(curl -s "https://hub.docker.com/v2/repositories/sayanpramanik/minecraft-paper/tags?page_size=100" | jq -r '.results[].name')
+          # Get tags from Docker Hub and extract version numbers
+          TAGS=$(curl -s "https://hub.docker.com/v2/repositories/sayanpramanik/minecraft-paper/tags?page_size=100" | jq -r '.results[].name' | grep -E "^${{ env.PAPER_VERSION }}-v[0-9]+$" || echo "")
           echo "TAGS=$TAGS" >> $GITHUB_ENV
 
       - name: Determine version number
         id: version_number
         run: |
-          VERSION_SUFFIX=1
-          while [[ $TAGS == *"$PAPER_VERSION-v$VERSION_SUFFIX"* ]]; do
+          # If no tags exist for this version, start with v1
+          if [ -z "$TAGS" ]; then
+            VERSION_SUFFIX=1
+          else
+            # Extract the highest version number and increment
+            VERSION_SUFFIX=$(echo "$TAGS" | grep -o "v[0-9]*$" | sed 's/v//' | sort -n | tail -n 1)
             VERSION_SUFFIX=$((VERSION_SUFFIX + 1))
-          done
+          fi
           echo "VERSION_SUFFIX=$VERSION_SUFFIX" >> $GITHUB_ENV
-          echo "FULL_VERSION=$PAPER_VERSION-v$VERSION_SUFFIX" >> $GITHUB_ENV
+          echo "FULL_VERSION=${{ env.PAPER_VERSION }}-v$VERSION_SUFFIX" >> $GITHUB_ENV
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
