--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           # Get tags from Docker Hub and extract version numbers
           TAGS=$(curl -s "https://hub.docker.com/v2/repositories/sayanpramanik/minecraft-paper/tags?page_size=100" | jq -r '.results[].name' | grep -E "^${{ env.PAPER_VERSION }}-v[0-9]+$" || echo "")
-          echo "TAGS=$TAGS" >> $GITHUB_ENV
+          echo "TAGS=${TAGS}" >> $GITHUB_ENV
 
       - name: Determine version number
         id: version_number
@@ -57,8 +57,8 @@ jobs:
             VERSION_SUFFIX=$(echo "$TAGS" | grep -o "v[0-9]*$" | sed 's/v//' | sort -n | tail -n 1)
             VERSION_SUFFIX=$((VERSION_SUFFIX + 1))
           fi
-          echo "VERSION_SUFFIX=$VERSION_SUFFIX" >> $GITHUB_ENV
-          echo "FULL_VERSION=${{ env.PAPER_VERSION }}-v$VERSION_SUFFIX" >> $GITHUB_ENV
+          echo "VERSION_SUFFIX=${VERSION_SUFFIX}" >> $GITHUB_ENV
+          echo "FULL_VERSION=${{ env.PAPER_VERSION }}-v${VERSION_SUFFIX}" >> $GITHUB_ENV
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
